# csc2026

.devcontainer/: post-create.sh
.github/workflows/: ci.yml  parallel-analysis-and-merge.yml
docs/setup/: local.md
exercises/: sd_e1_parallel.md
exercises/TT-E1-debugging-sanitizers/starter/: CMakeLists.txt
exercises/TT-E2-docs-and-ci/ci-parallel-root/: gamma-gamma-analysis-v1.py
exercises/TT-E2-docs-and-ci/ci-parallel-root/plots/: histogram_data_B.GamGam.root  histogram_data_C.GamGam.root  merged_histograms_data.root
